--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
