--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sendgrid/mail": "^8.1.5",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mailgun-js": "^0.22.0",
