--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mailgun-js": "^0.22.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.10.1",
     "resend": "^4.5.1",
     "swagger-jsdoc": "^6.2.8",
